--- a/server/Dockerfile.prod
+++ b/server/Dockerfile.prod
@@ -1,6 +1,6 @@
 FROM python:3.8
-WORKDIR /server
-COPY . ./
+WORKDIR /app
+COPY . .
 RUN pip install -r requirements.txt
 EXPOSE 8000
 CMD ["python", "manage.py", "runserver", "8000"]
