--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -43,11 +43,10 @@ services:
     image: mysql:8
     restart: always
     environment:
-      - MYSQL_DATABASE='movie_review'
-      - MYSQL_USER='root'
-      - MYSQL_PASSWORD='some_password'
-      - MYSQL_ROOT_PASSWORD='some_password'
-      - MYSQL_HOST='localhost'
+      MYSQL_DATABASE: movie_review
+      MYSQL_ROOT_PASSWORD: "123"
+      MYSQL_PASSWORD: "123"
+      MYSQL_ALLOW_EMPTY_PASSWORD: true
     networks:
       - custom
 
