--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,6 +7,7 @@ services:
     ports:
       - '83:3000'
     restart: always
+    env_file: ./server/.env.local
     depends_on:
       - server
     networks:
@@ -18,6 +19,7 @@ services:
       context: ./client-admin
       dockerfile: Dockerfile.prod
     restart: always
+    env_file: ./server/.env.local
     ports:
       - '8003:3000'
     depends_on:
@@ -31,6 +33,7 @@ services:
       context: ./server
       dockerfile: Dockerfile.prod
     restart: always
+    env_file: ./server/.env.local
     ports:
       - '3003:8000'
     depends_on:
